# tt-hometask

./: CMakeLists.txt  README.md  TASK.md  build.sh  env.sh  format.sh  setup_simulator.sh
kernels/: eltwise_sfpu.cpp  exp_sfpu.cpp  read_tile.cpp  write_tile.cpp
src/: main.cpp
